# bandar-baat

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  VISION.md  docker-compose.dev.yml  docker-compose.prod.yml  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
apps/api/: Dockerfile  Dockerfile.dev  drizzle.config.ts  package.json  pyproject.toml
apps/api/drizzle/: 0000_dusty_lord_tyger.sql  0001_mean_zaran.sql
apps/api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
apps/api/src/: __init__.py  auth.py  auth.ts  config.py  index.ts  main.py  schemas.py
apps/api/src/alembic/: env.py
apps/api/src/db/: __init__.py  database.py  index.ts  migrate.ts  models.py  schema.ts  seed-characters.ts  seed.py  seed.ts
apps/api/src/lib/: prompts.ts  storage.ts  tts.ts
apps/api/src/routes/: __init__.py  auth.py  characters.ts  dictionary.ts  exercises.py  exercises.ts  grammar.py  grammar.ts  reviews.py  reviews.ts  stories.py  stories.ts  tts.ts  users.py  users.ts  words.py  words.ts
apps/api/src/services/: __init__.py  exercise_evaluator.py  story_generator.py
apps/web/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: Layout.tsx  Navbar.tsx
apps/web/src/components/ui/: dropdown-menu.tsx
apps/web/src/components/views/: DashboardView.tsx  HistoryView.tsx  (+6 more)
apps/web/src/hooks/: useAuth.tsx  useTheme.tsx
apps/web/src/lib/: api.ts  utils.ts
scripts/: dump_local_db.sh  load_db.sh
